# secrethsare

./: LICENSE  README.md  secrethsare.cabal
app/: Main.hs
src/: CRC24.hs  GF256.hs
