name:                secrethsare
version:             0.1.0.0
synopsis:            implementation of shamir's secret sharing
description:         Please see README.md
homepage:            http://github.com/sdx23/secrethsare#readme
license:             MIT
license-file:        LICENSE
author:              Max Voit
maintainer:          max.voit+dvsh@with-eyes.net
copyright:           2015 Max Voit
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GF256, CRC24
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable secrethsare
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random
                     , bytestring
                     , base64-bytestring
                     , parsec
                     , optparse-applicative
                     , secrethsare
  default-language:    Haskell2010

test-suite secrethsare-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , secrethsare
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sdx23/secrethsare
